<resources>
    <string name="app_name">Porter@ CFC</string>
    <string name="permissions">Hay permisos obligatorios sin conceder</string>
    <string name="lantern">lantern</string>
    <string name="readError">Lectura incorrecta, inténtalo otra vez.</string>
    <string name="clientExist">El cliente fue regisitrado recientemente.</string>
    <string name="error">Ha ocurrido un error.</string>
    <string name="conection_error">Ha ocurrido un error. Verifique su conexión de datos.</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="carn_identidad">Carné de identidad</string>
    <string name="verificar">Verificar</string>
    <string name="adicionar">Adicionar</string>
    <string name="insertar">Insertar</string>
    <string name="requerido">Requerido</string>
    <string name="todos">Todos</string>
    <string name="ni_os">Niños</string>
    <string name="j_venes">Jóvenes</string>
    <string name="adultos">Adultos</string>
    <string name="_3ra_edad">3ra Edad</string>
    <string name="hi">HOLA</string>
    <string name="first_description"><b><i>Bienvenido a PORTER@</i></b>\n Una aplicación para regular el acceso de los puntos de venta</string>
    <string name="id"><big>IDENTIFICACIÓN</big></string>
    <string name="second_description">Para el acceso a un punto de venta cada cliente debe presentar necesariamente su identificación personal</string>
    <string name="reg"><big>REGISTRO</big></string>
    <string name="third_description">El cliente presentará su identificación y será registrado en la aplicación</string>
    <string name="once"><big>SÓLO UNA VEZ</big></string>
    <string name="fourth_description">Si el cliente vuelve a presentar la identificación antes que culmine el plazo establecido por la institución será denegado</string>
    <string name="app_intro_skip_button">
         Omitir
    </string>
    <string name="app_intro_next_button">
         Siguiente
    </string>
    <string name="app_intro_back_button">
         Atrás
    </string>
    <string name="app_intro_done_button">
         Hecho
    </string>
    <string name="guardar_como_pdf">Guardar como PDF</string>
    <string name="guardar_como_csv">Guardar como CSV</string>
    <string name="guardar_como_archivo_de_porter">Guardar como archivo de Porter@</string>
    <string name="export_OK">La visita ha sido exportada al almacenamiento del dispositivo</string>
    <string name="export_OK_black_list">La lista negra ha sido exportada al almacenamiento del dispositivo</string>
    <string name="modo_de_registro">Registrar visita general.</string>
    <string name="modo_de_chequeo">Registrar visita a la biblioteca.</string>
    <string name="acerca_de">Acerca de</string>
    <string name="uci_2020">UCI 2020</string>
    <string name="c_digo_fuente">Código fuente</string>
    <string name="https_github_com_richardanca_porter_by_richard">https://github.com/richardanca/Porter_By_Richard</string>
    <string name="https_github_com">https://github.com</string>
    <string name="app_icon">App icon</string>
    <string name="define_el_tiempo_de_rotaci_n_de_los_clientes_aqu">Define el tiempo (Horas) de rotación de los clientes aquí.</string>
    <string name="horas">Horas</string>
    <string name="universidad_de_las_ciencias_inform_ticas">Universidad de las Ciencias Informáticas</string>
    <string name="todos_los_derechos_reservados_n2018">Todos los derechos reservados\n2020</string>
    <string name="teclado">Teclado</string>
    <string name="lista">Listar</string>
    <string name="readQR">Lector Qr</string>
    <string name="filtros">Filtros</string>
    <string name="exportar">Exportar</string>
    <string name="eliminar">Eliminar</string>
    <string name="buscar">Buscar por CI</string>
    <string name="editar">Editar</string>
    <string name="merge">Mezclar</string>
    <string name="descripci_n_de_la_cola">Descripción de la visita.</string>
    <string name="details">Details</string>
    <string name="notDescroption">La visita no tiene descripción.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="atras">Atras</string>
    <string name="borrar_busqueda">Borrar busqueda</string>
    <string name="chequear_deschequiar">Chequear / Deschequiar</string>
    <string name="lista_negra">Lista Negra</string>
    <string name="su_nombre">Su nombre</string>
    <string name="guardar">Guardar</string>

    <string name="Permissions_continue">Continuar</string>
    <string name="Permissions_not_now">Ahora no</string>
    <string name="Permissions_permission_required">Se requiere permiso</string>
    <string name="qr_fragment_permanent_denial_camera">Es nesesario acceder a la cámara para escanear los QR.</string>
    <string name="seleccione_el_rango_de_la_cola_a_exportar">Seleccione el rango de la visita a exportar.</string>
    <string name="deschequiar">NO CHEQUEAR</string>
    <string name="chequiar">CHEQUEAR</string>
    <string name="delete">DELETE</string>
    <string name="fv">Fv</string>
    <string name="dialog_ok_button">Ok</string>
    <string name="dialogInfo">Debe escanear su carné para continuar.</string>
    <string name="info">Informacion</string>
    <string name="readWrong">Error al leer</string>
    <string name="error_conection">Error de red</string>
    <string name="update">Actualizar</string>
    <string name="queue_not_found">La visita no existe.</string>
    <string name="next">Continuar</string>
    <string name="province">Seleccione la provincia</string>
    <string name="municipie">Seleccione un municipio</string>
    <string name="store">Seleccione una tienda</string>
    <string name="select_municipe">Seleccione un municipio</string>
    <string name="select_store">Seleccione una tienda</string>
    <string name="products">Pollo, aceite, picadillo</string>


    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="opened">Abiertas</string>
    <string name="saved">Guardadas</string>
    <string name="new_queue">Nueva visita</string>
    <string name="colaborators">Mis colaboradores</string>
    <string name="export_queue">Exportar visita</string>
    <string name="export_queues">Exportar visitas</string>
    <string name="settings">Ajustes</string>
    <string name="export_list">Debe tener al menos una visita para exportar.</string>
    <string name="nombre_de_la_cola">Nombre de la visita</string>
    <string name="sin_definir">Sin definir</string>
    <string name="descripci_n">Descripción</string>
    <string name="emitir_alertas">Emitir alertas</string>
    <string name="ajustes">Ajustes</string>
    <string name="establecimiento">Establecimiento</string>
    <string name="provincia">Provincia</string>
    <string name="municipio">Municipio</string>
    <string name="colaboradores">Colaboradores</string>
    <string name="productos">Categorías</string>
    <string name="time_rotation">Tiempo de rotación</string>
    <string name="multiple_queue">Alertas de  visitas múltiples</string>
    <string name="count_alert_queue">Cantidad de visitas a alertar</string>
    <string name="date_init">Fecha de inicio</string>
    <string name="date_end">Fecha de fin</string>
    <string name="modo_chequeo">Modo chequeo</string>
    <string name="producto">Categoría</string>
    <string name="nombre_del_producto">Nombre de la categoría</string>
    <string name="optional">Opcional</string>
    <string name="error_colaborator">No se pudo agragar el colaborador.</string>
    <string name="verificar_cola">Verificar visita</string>
    <string name="cerrar">Cerrar</string>
    <string name="interesantes">Interesantes</string>
    <string name="enviar_correo">Enviar correo</string>
</resources>
