<!--
  ~ Copyright (c) 2018. Jay Paulynice (jay.paulynice@gmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="100"
        android:title="@string/buscar"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save_online"
        android:icon="@drawable/ic_save_white"
        android:orderInCategory="100"
        android:title="@string/guardar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list"
        android:orderInCategory="100"
        android:title="@string/lista"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_filter_menu"
        android:icon="@drawable/ic_list"
        android:orderInCategory="100"
        android:title="@string/filtros"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settigns"
        android:orderInCategory="100"
        android:title="@string/ajustes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_export"
        android:orderInCategory="100"
        android:title="@string/exportar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_check"
        android:icon="@drawable/ic_check_blue"
        android:orderInCategory="100"
        android:title="@string/modo_chequeo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_validate"
        android:icon="@drawable/ic_verify"
        android:orderInCategory="100"
        android:title="@string/verificar_cola"
        app:showAsAction="never" />

</menu>