<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search"
        android:orderInCategory="100"
        android:title="@string/buscar"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_download"
        android:orderInCategory="100"
        android:title="@string/insertar"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_black_list"
        android:icon="@drawable/ic_baseline_view_list"
        android:orderInCategory="100"
        android:title="@string/lista_negra"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/ajustes"
        android:visible="false"

        app:showAsAction="never" />

    <item
        android:id="@+id/action_abaut"
        android:icon="@drawable/ic_help_outline"
        android:orderInCategory="100"
        android:title="@string/acerca_de"
        android:visible="false"

        app:showAsAction="never" />

</menu>