<!--
  ~ Copyright (c) 2018. Jay Paulynice (jay.paulynice@gmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter_todos"
        android:icon="@drawable/ic_list"
        android:orderInCategory="100"
        android:title="@string/todos" />

    <item
        android:id="@+id/action_filter_niños"
        android:icon="@drawable/ic_baby"
        android:orderInCategory="100"
        android:title="@string/ni_os" />

    <item
        android:id="@+id/action_filter_jovenes"
        android:icon="@drawable/ic_joung"
        android:orderInCategory="100"
        android:title="@string/j_venes" />

    <item
        android:id="@+id/action_filter_adultos"
        android:icon="@drawable/ic_adulto"
        android:orderInCategory="100"
        android:title="@string/adultos" />

    <item
        android:id="@+id/action_filter_3raEdad"
        android:icon="@drawable/ic_grandfather"
        android:orderInCategory="100"
        android:title="@string/_3ra_edad" />

</menu>