<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:text="@string/nombre_de_la_cola"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/_editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"
                android:hint="@string/sin_definir"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/darkGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/descripci_n"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/_editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:hint="@string/sin_definir"
                android:textColor="@color/darkGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/productos"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/_editTextProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:hint="@string/sin_definir"
                android:textColor="@color/darkGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/darkGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:text="@string/ajustes"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/alertSwitch"
                android:checked="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/emitir_alertas"
                android:textColor="@color/darkGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/establecimiento"
                android:textColor="@color/darkGray"
                android:textStyle="bold" />

            <Button
                android:id="@+id/selectStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="start|center_vertical"
                android:paddingStart="16dp"
                android:text="@string/sin_definir"
                android:textColor="@color/darkGray"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>