<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="5dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/name_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/info"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorDarkGrayScale"
            tools:text="Ayuda" />

        <TextView
            android:id="@+id/text_rasson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dialogInfo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorDarkGrayScale"
            tools:text="@string/dialogInfo" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/google_yellow"
            android:text="@string/dialog_ok_button"
            android:textColor="@color/colorDarkGrayScale"
            tools:targetApi="lollipop" />
    </LinearLayout>
</LinearLayout>